infrastructure/kubernetes/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dripplex
  namespace: dripplex
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 25m
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: www.dripplex.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: customer-web
                port:
                  number: 3001
    - host: api.dripplex.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 3000
    - host: merchant.dripplex.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: merchant-portal
                port:
                  number: 3002
    - host: rider.dripplex.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rider-portal
                port:
                  number: 3003
